DescriptiveEnum 상속 enum class에 대해 name 프로퍼티가 아닌 value 프로퍼티로 직렬화/역직렬화 수행

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,6 @@
 # project basic setting
-group=com.hunet.diagnostic_assessment_platform
-version=1.0.0
+group=com.hunet.common_library
+version=0.0.3-SNAPSHOT
 #profile=local
 
 # repository
@@ -15,7 +15,7 @@ jvm.version=21
 
 # kotlin setting
 kotlin.code.style=official
- ## kotlin null check, -Xjsr305=strict
+## kotlin null check, -Xjsr305=strict
 kotlin.jsr305=strict
 
 kotlin.java.parameters=true
@@ -29,9 +29,9 @@ kotlin.compiler.free.args=-Xjvm-default=all
 
 # kapt Annotation Processing
 # org.jetbrains.kotlin.gradle.internal.kapt.KaptProperties
- # kapt print debug log
+# kapt print debug log
 kapt.verbose=true
- # kap incremental compile
+# kap incremental compile
 kapt.incremental.apt=true
- # class path include
+# class path include
 kapt.include.compile.classpath=false
