--- a/gradle.properties
+++ b/gradle.properties
@@ -35,3 +35,11 @@ kapt.verbose=true
 kapt.incremental.apt=true
 # class path include
 kapt.include.compile.classpath=false
+
+# Per-module version override (defaults to the root version if unspecified)
+# moduleVersion.common-core=1.0.0-SNAPSHOT
+# moduleVersion.standard-api-response=1.0.1-SNAPSHOT
+# moduleVersion.std-api-annotations=1.0.0-SNAPSHOT
+# moduleVersion.std-api-documentation=1.0.0-SNAPSHOT
+# moduleVersion.jpa-repository-extension=1.0.0-SNAPSHOT
+# moduleVersion.test-support=0.0.0-SNAPSHOT
