--- a/.coderabbit.yml
+++ b/.coderabbit.yml
@@ -13,7 +13,7 @@ reviews:
   auto_review:
     enabled: true
     drafts: false
-    base_branches: ['feature/*', 'release/*', 'dev' , 'qa', '!main']
+    base_branches: ['feature/*', 'release/*', 'dev' , 'qa', '!main', 'refactoring/*']
 
   path_instructions:
     - path: "**/*.kt"
