--- a/gradle.properties
+++ b/gradle.properties
@@ -41,5 +41,5 @@ moduleVersion.common-core=1.0.3-SNAPSHOT
 moduleVersion.standard-api-response=1.1.0-SNAPSHOT
 # moduleVersion.std-api-annotations=1.0.1-SNAPSHOT
 # moduleVersion.std-api-documentation=1.0.1-SNAPSHOT
-# moduleVersion.jpa-repository-extension=1.0.1-SNAPSHOT
+moduleVersion.jpa-repository-extension=1.0.2-SNAPSHOT
 moduleVersion.test-support=1.0.3-SNAPSHOT
