--- a/gradle.properties
+++ b/gradle.properties
@@ -38,8 +38,6 @@ kapt.include.compile.classpath=false
 
 # Per-module version override (defaults to the root version if unspecified)
 moduleVersion.common-core=1.0.3-SNAPSHOT
-moduleVersion.standard-api-response=1.1.0-SNAPSHOT
-# moduleVersion.std-api-annotations=1.0.1-SNAPSHOT
-# moduleVersion.std-api-documentation=1.0.1-SNAPSHOT
-# moduleVersion.jpa-repository-extension=1.0.1-SNAPSHOT
+moduleVersion.standard-api-response=1.1.1-SNAPSHOT
+moduleVersion.std-api-annotations=1.0.1-SNAPSHOT
 moduleVersion.test-support=1.0.3-SNAPSHOT
