--- a/modules/test/test-support/src/test/resources/application.properties
+++ b/modules/test/test-support/src/test/resources/application.properties
@@ -6,5 +6,5 @@ spring.jpa.hibernate.ddl-auto=none
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
 spring.sql.init.mode=always
 spring.sql.init.schema-locations=classpath:schema.sql
-logging.level.com.hunet.common_library.support.DataFeed=DEBUG
+logging.level.com.hunet.common.support.DataFeed=DEBUG
 
