3차, std_api_documentation -> apidoc

--- a/gradle.properties
+++ b/gradle.properties
@@ -38,6 +38,8 @@ kapt.include.compile.classpath=false
 
 # Per-module version override (defaults to the root version if unspecified)
 moduleVersion.common-core=1.0.3-SNAPSHOT
+moduleVersion.apidoc-core=1.0.1-SNAPSHOT
+moduleVersion.apidoc-annotations=1.0.1-SNAPSHOT
 # moduleVersion.std-api-annotations=1.0.1-SNAPSHOT
 # moduleVersion.std-api-documentation=1.0.1-SNAPSHOT
 moduleVersion.jpa-repository-extension=1.0.2-SNAPSHOT
