findAnnotation -> kotlin/java 스타일 모두 찾을 수 있는 getAnnotation으로 전환

--- a/gradle.properties
+++ b/gradle.properties
@@ -19,6 +19,15 @@ kotlin.code.style=official
 kotlin.jsr305=strict
 
 kotlin.java.parameters=true
+
+# gradle console setting for better tool compatibility
+org.gradle.console=plain
+# Enable Gradle build cache for faster builds
+org.gradle.caching=true
+# Run builds in parallel (useful for multi-module projects)
+org.gradle.parallel=true
+# Configure JVM heap size for Gradle daemon
+org.gradle.jvmargs=-Xmx2g -XX:+HeapDumpOnOutOfMemoryError
 ## org/jetbrains/kotlin/gradle/plugin/PropertiesProvider.kt
 # incremental compilation (true, false)
 kotlin.incremental=true
