--- a/modules/jpa/jpa-repository-extension/src/test/resources/application.properties
+++ b/modules/jpa/jpa-repository-extension/src/test/resources/application.properties
@@ -1,9 +1,10 @@
-spring.datasource.url=jdbc:h2:mem:testdb;MODE=MySQL;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
+spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE;DATABASE_TO_UPPER=false
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
+spring.sql.init.mode=never
 logging.level.org.hibernate.SQL=debug
 softdelete.upsert-all.flush-interval=5
 
