feat(CMPF-1037) 불필요한 파일들을 커밋에서 제외

--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,14 @@
 /temp/
 
 .local-temp
+
+### macOS ###
+.DS_Store
+
+### Excel temp files ###
+~$*.xlsx
+
+### Claude Code ###
+.claude/
+**/docs/
+CLAUDE.md
