--- a/gradle.properties
+++ b/gradle.properties
@@ -46,6 +46,7 @@ kapt.incremental.apt=true
 kapt.include.compile.classpath=false
 
 # Per-module version override (defaults to the root version if unspecified)
+moduleVersion.common-bom=2026.1.0-SNAPSHOT
 moduleVersion.common-core=1.2.1-SNAPSHOT
 moduleVersion.apidoc-core=1.1.0-SNAPSHOT
 moduleVersion.apidoc-annotations=1.1.0-SNAPSHOT
@@ -53,4 +54,4 @@ moduleVersion.jpa-repository-extension=1.2.0-SNAPSHOT
 moduleVersion.standard-api-response=1.3.1-SNAPSHOT
 moduleVersion.std-api-annotations=1.1.0-SNAPSHOT
 moduleVersion.test-support=1.1.1-SNAPSHOT
-moduleVersion.tbeg=1.0.0-SNAPSHOT
+moduleVersion.tbeg=1.1.0-SNAPSHOT
